--- a/pom.xml
+++ b/pom.xml
@@ -1,76 +1,155 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
+
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.mycompany</groupId>
-    <artifactId>Tpi_corto2</artifactId>
-    <version>Version_1</version>
+
+    <artifactId>Biblioteca</artifactId>
+
+    <version>1.0-SNAPSHOT</version>
+
     <packaging>jar</packaging>
+
+
     <dependencies>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
-            <type>jar</type>
+         <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
         </dependency>
+
+
         <dependency>
+
             <groupId>org.eclipse.persistence</groupId>
-            <artifactId>javax.persistence</artifactId>
-            <version>2.1.0</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
+
             <artifactId>org.eclipse.persistence.core</artifactId>
+
             <version>2.5.2</version>
+
         </dependency>
+
+
         <dependency>
+
             <groupId>org.eclipse.persistence</groupId>
+
             <artifactId>org.eclipse.persistence.asm</artifactId>
+
             <version>2.5.2</version>
+
         </dependency>
+
+
         <dependency>
+
             <groupId>org.eclipse.persistence</groupId>
+
             <artifactId>org.eclipse.persistence.antlr</artifactId>
+
             <version>2.5.2</version>
+
         </dependency>
+
+
         <dependency>
+
             <groupId>org.eclipse.persistence</groupId>
+
             <artifactId>org.eclipse.persistence.jpa</artifactId>
+
             <version>2.5.2</version>
+
         </dependency>
+
+
         <dependency>
+
             <groupId>org.eclipse.persistence</groupId>
+
             <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
+
             <version>2.5.2</version>
+
         </dependency>
+
+
         <dependency>
+
             <groupId>org.eclipse.persistence</groupId>
+
+            <artifactId>javax.persistence</artifactId>
+
+            <version>2.1.0</version>
+
+        </dependency>
+
+
+        <dependency>
+
+            <groupId>org.eclipse.persistence</groupId>
+
             <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+
             <version>2.5.2</version>
+
             <scope>provided</scope>
+
         </dependency>
+
+
         <dependency>
+
             <groupId>org.junit.jupiter</groupId>
+
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.3.1</version>
+
+            <version>5.6.0</version>
+
             <scope>test</scope>
+
         </dependency>
+
+
         <dependency>
+
             <groupId>org.junit.jupiter</groupId>
+
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.3.1</version>
+
+            <version>5.6.0</version>
+
             <scope>test</scope>
+
         </dependency>
+       
+
+
         <dependency>
+
             <groupId>org.junit.jupiter</groupId>
+
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.3.1</version>
+
+            <version>5.6.0</version>
+
             <scope>test</scope>
+
         </dependency>
+
     </dependencies>
+
+
     <properties>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <maven.compiler.source>1.8</maven.compiler.source>
+
         <maven.compiler.target>1.8</maven.compiler.target>
+
     </properties>
+
 </project>
